<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RPSRec_proto</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="record">Record</string>
    <string name="start">Start</string>
    <string name="userName">Full Name</string>
    <string name="nameHint">Full Name</string>
    <string name="phoneHint">Phone Number</string>
    <string name="title_activity_blank_record">BlankRecord</string>
    <string name="add_new_record">Add new record</string>
    <string name="title_activity_new_record">NewRecord</string>
    <string name="speciesHint">Species Name</string>
    <string name="rarityTitle">DAFOR scale abundance</string>
    <string name="coordinateTitle">Species Coordinates</string>
    <string name="title_activity_user_data_view">UserDataView</string>
    <string name="title_activity_record_view">RecordView</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="emailHint">Email Address</string>

    <!-- DAFOR slider elements -->
    <string-array name="dafor_array">
        <item>D (Dominant)</item>
        <item>A (Abundant)</item>
        <item>F (Frequent)</item>
        <item>O (Occasional)</item>
        <item>R (Rare)</item>
    </string-array>

    <!-- Navigation Drawer (Hamburger Menu) items -->
    <string-array name="nav_drawer_items">
        <item>Send</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    <string name="add_specimen_img_title">Add specimen image</string>
    <string name="species_name_hint">Species Name</string>
    <string name="enter_record_button_text">Enter Record</string>
    <string name="add_location_image_title">Add Location Image</string>
    <string name="typlocation_hint">Typical Location</string>
    <string name="addinfo_hint">Additional Information</string>
    <string name="gallery_button">Gallery</string>
    <string name="camera_button">Camera</string>
    <string name="title_activity_temp_record_view">TempRecordView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>