<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="info.cormacbrady.rpsrec.NewRecord" >

        <EditText
            android:id="@+id/speciesName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/speciesHint"
            android:maxLines="1"
            android:text="@string/species_name_hint" >

            <requestFocus />
        </EditText>

        <Spinner
            android:id="@+id/dafor_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rarityTitle"
            android:layout_below="@+id/rarityTitle"
            android:layout_marginTop="11dp"
            android:entries="@array/dafor_array"
            tools:listitem="@android:layout/simple_spinner_dropdown_item" />

        <TextView
            android:id="@+id/rarityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/speciesName"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="32dp"
            android:text="@string/rarityTitle"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/typLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/info"
            android:layout_below="@+id/info"
            android:layout_marginTop="27dp"
            android:ems="10"
            android:hint="@string/typlocation_hint"
            android:maxLines="1" />

        <TextView
            android:id="@+id/add_species_img_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/typLocation"
            android:layout_below="@+id/typLocation"
            android:layout_marginTop="58dp"
            android:text="@string/add_specimen_img_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/add_species_img_title"
            android:layout_below="@+id/add_species_img_title"
            android:layout_marginTop="44dp"
            android:text="@string/add_location_image_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/addRecordDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="39dp"
            android:text="@string/enter_record_button_text" />

        <Button
            android:id="@+id/getSpecimenImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/add_species_img_title"
            android:layout_alignBottom="@+id/add_species_img_title"
            android:layout_marginLeft="21dp"
            android:layout_toRightOf="@+id/rarityTitle"
            android:text="@string/gallery_button" />

        <Button
            android:id="@+id/getLocationImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignLeft="@+id/getSpecimenImage"
            android:text="@string/gallery_button" />

        <Button
            android:id="@+id/specimenCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/getSpecimenImage"
            android:layout_alignBottom="@+id/getSpecimenImage"
            android:layout_marginLeft="19dp"
            android:layout_toRightOf="@+id/getSpecimenImage"
            android:text="@string/camera_button" />

        <Button
            android:id="@+id/locationCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/getLocationImage"
            android:layout_alignBottom="@+id/getLocationImage"
            android:layout_alignLeft="@+id/specimenCamera"
            android:text="@string/camera_button" />

        <EditText
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/dafor_spinner"
            android:layout_below="@+id/dafor_spinner"
            android:layout_marginTop="29dp"
            android:ems="10"
            android:hint="@string/addinfo_hint"
            android:inputType="textMultiLine"
            android:maxLines="2" />

    </RelativeLayout>

</ScrollView>