<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="info.cormacbrady.rpsrec.NewRecord" >

        <EditText
            android:id="@+id/speciesName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/speciesHint"
            android:maxLines="1" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/addRecordDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="39dp"
            android:text="@string/enter_record_button_text" />

        <ImageButton
            android:id="@+id/getSpecimenImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/getLocationImage"
            android:layout_alignTop="@+id/specimenCamera"
            android:background="@null"
            android:contentDescription="get image from gallery"
            android:src="@drawable/ic_gallery" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/add_species_img_title"
            android:layout_below="@+id/add_species_img_title"
            android:layout_marginTop="66dp"
            android:text="@string/add_location_image_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageButton
            android:id="@+id/getLocationImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_species_img_title"
            android:layout_marginTop="52dp"
            android:layout_toRightOf="@+id/rarityTitle"
            android:background="@null"
            android:contentDescription="get image from gallery"
            android:src="@drawable/ic_gallery" />

        <ImageButton
            android:id="@+id/locationCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/getLocationImage"
            android:layout_toRightOf="@+id/info"
            android:background="@null"
            android:contentDescription="take photo with camera"
            android:src="@drawable/ic_camera" />

        <ImageButton
            android:id="@+id/specimenCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/locationCamera"
            android:layout_marginBottom="37dp"
            android:layout_toRightOf="@+id/info"
            android:background="@null"
            android:contentDescription="take photo with camera"
            android:src="@drawable/ic_camera" />

        <TextView
            android:id="@+id/rarityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/speciesName"
            android:layout_below="@+id/speciesName"
            android:layout_marginTop="46dp"
            android:text="@string/rarityTitle"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/dafor_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/rarityTitle"
            android:layout_alignBottom="@+id/rarityTitle"
            android:layout_alignLeft="@+id/getSpecimenImage"
            android:layout_marginLeft="22dp"
            android:entries="@array/dafor_array"
            tools:listitem="@android:layout/simple_spinner_dropdown_item" />

        <TextView
            android:id="@+id/add_species_img_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/info"
            android:layout_below="@+id/get_location_button"
            android:layout_marginTop="51dp"
            android:text="@string/add_specimen_img_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/get_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/info"
            android:layout_below="@+id/dafor_spinner"
            android:layout_marginTop="73dp"
            android:text="@string/get_location_hint" />

        <EditText
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rarityTitle"
            android:layout_below="@+id/dafor_spinner"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/addinfo_hint"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical" />

    </RelativeLayout>

</ScrollView>